--- a/public/admin/config.template.yml
+++ b/public/admin/config.template.yml
@@ -1290,7 +1290,7 @@ collections:
       - label: "Title"
         name: title
         widget: string
-        hint: "A name to identify this file (e.g., 'Service User Guide')"
+        hint: "A name to identify this file (e.g., 'Policies and Downloads')"
 
       - label: "File"
         name: file
