--- a/src/content/assessments/faqs-page/top-content.yaml
+++ b/src/content/assessments/faqs-page/top-content.yaml
@@ -3,3 +3,6 @@ subheading: ""
 image: ~/assets/images/assessments/pexels-leeloothefirst-5428829-1-.jpg
 image_alt: Question marks in papercraft
 body: ""
+seo_settings:
+  metaTitle: "FAQs About ADHD & Autism Assessments | Together"
+  metaDescription: "Common questions about adult ADHD and autism assessments answered. Learn about the process, costs, what to expect, and how to prepare for your assessment."
