--- a/src/content/assessments/services-page/top-content.yaml
+++ b/src/content/assessments/services-page/top-content.yaml
@@ -9,3 +9,6 @@ catalogue_info:
   name: ADHD and Autism Assessment Services
   description: Comprehensive diagnostic assessments for adults by qualified
     practitioners specialising in neurodiversity.
+seo_settings:
+  metaTitle: "ADHD & Autism Assessment Services | Together Assessments"
+  metaDescription: "Explore our adult neurodevelopmental assessment options. ADHD, autism, and combined assessments with personalised support sessions. Evidence-based approach."
