Domain env vars moved to netlify

--- a/netlify.toml
+++ b/netlify.toml
@@ -7,9 +7,12 @@
   command = "npm run build:${WEBSITE_ID}"
 
 [build.environment]
-  ASSESSMENTS_URL = "https://nd-assessment-site.netlify.app"
-  ADHD_URL = "https://nd-adhd-site.netlify.app"
-  AUTISM_URL = "https://nd-autism-site.netlify.app"
+  # Site-specific URLs must be configured in each Netlify site's dashboard
+  # (Site settings > Environment variables)
+  #
+  #   ASSESSMENTS_URL = "https://nd-assessment-site.netlify.app"
+  #  ADHD_URL = "https://nd-adhd-site.netlify.app"
+  #  AUTISM_URL = "https://nd-autism-site.netlify.app"
 [build.processing.html]
   pretty_urls = false
 
