feat(content/assessments): Update Site Settings "general"

--- a/src/content/assessments/site-settings.yaml
+++ b/src/content/assessments/site-settings.yaml
@@ -37,4 +37,4 @@ seo:
   description: Professional neurodiversity assessments for adults in the UK. ADHD
     and autism assessments for North Lincolnshire and surrounding areas.
 analytics:
-  ga4_id: ""
+  ga4_id: G-52RMM5849T
