SEO Metadata Description fix

--- a/src/content/adhd/site-settings.yaml
+++ b/src/content/adhd/site-settings.yaml
@@ -13,7 +13,7 @@ footer:
     surrounding areas.
 seo:
   title_default: Together ADHD Assessments
-  title_template: "%s — Together ADHD Assessments"
+  title_template: "%s | Together ADHD Assessments"
   description: ADHD assessments for adults in the UK. Professional neurodiversity
     assessment services for North Lincolnshire and surrounding areas.
   robots_index: false
