--- a/src/content/autism/site-settings.yaml
+++ b/src/content/autism/site-settings.yaml
@@ -13,7 +13,7 @@ footer:
     surrounding areas.
 seo:
   title_default: Together Autism Assessments
-  title_template: "%s — Together Autism Assessments"
+  title_template: "%s | Together Autism Assessments"
   description: Autism assessments for adults in the UK. Professional
     neurodiversity assessment services for North Lincolnshire and surrounding
     areas.
